--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
     margin-top:4px;
     width:100%;
     height:100%;
+    border-radius:50%;
 }
 
 .library-item {
@@ -137,6 +138,7 @@ main {
 
 /* Header */
 header {
+    width:100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -168,7 +170,7 @@ footer.now-playing {
     border-radius: 20px;
     border: none;
     /* outline: none; */
-    background: url('search logo.png') no-repeat 10px center;
+    background: url('search.jpg') no-repeat 10px center;
     background-size: 20px 20px;
     background-color: rgb(44, 42, 42);
     /* filter:invert(1);
