--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    gap: 15px;
 }
 .home {
     display:flex;
@@ -147,7 +146,7 @@ header {
     background-color: black;
     color: #fff;
     position:fixed;
-    width:vw;
+    width:100%;
     height:8%;
     top:0;
 }
