--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    gap:20%;
 }
 .home {
     display:flex;
