--- a/styles.css
+++ b/styles.css
@@ -147,8 +147,8 @@ header {
     background-color: black;
     color: #fff;
     position:fixed;
-    width:100%;
-    height:8%;
+    width:vw;
+    height:5%;
     top:0;
 }
 
