--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ main {
 
 /* Header */
 header {
-    
+    width:100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -147,7 +147,6 @@ header {
     background-color: black;
     color: #fff;
     position:fixed;
-    width:vw;
     height:5%;
     top:0;
 }
