--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    gap:20%;
+    width: auto;
+    gap:15px;
 }
 .home {
     display:flex;
@@ -86,7 +86,8 @@ body {
     padding:10px;
     /* margin-top: 64px; */
     margin-bottom: 0;
-    margin-top:4%;
+    position:fixed;
+    top:4%;
     gap:1%;
 }
 
