--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,12 @@ body {
     display:flex;
     gap:15px;
 }
-.header-div{
-    width:auto;
-}
-.header-content {
+
+header.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: auto;
-    gap:15px;
+    width: 100%;
 }
 .home {
     display:flex;
@@ -87,10 +84,10 @@ body {
     width:auto;
     height:vh;
     padding:10px;
+    margin-top:5%;
     /* margin-top: 64px; */
     margin-bottom: 0;
     position:fixed;
-    top:6%;
     gap:1%;
 }
 
@@ -144,7 +141,6 @@ main {
 
 /* Header */
 header {
-    width:auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -153,7 +149,8 @@ header {
     color: #fff;
     position:fixed;
     top:0;
-    height:3%;
+    width:100%;
+    height:4%;
 }
 
 /* Footer (Now Playing) */
