--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ header.header-content {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height:4%;
+    gap:10%;
 }
 .home {
     display:flex;
@@ -84,7 +86,7 @@ header.header-content {
     width:auto;
     height:vh;
     padding:10px;
-    margin-top:5%;
+    margin-top:4%;
     /* margin-top: 64px; */
     margin-bottom: 0;
     position:fixed;
@@ -144,7 +146,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 10%;
     background-color: black;
     color: #fff;
     position:fixed;
