--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,7 @@ header.header-content {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height:4%;
-    gap:10%;
+    height:7%;
 }
 .home {
     display:flex;
@@ -86,10 +85,11 @@ header.header-content {
     width:auto;
     height:vh;
     padding:10px;
-    margin-top:4%;
+    margin-top:7%;
     /* margin-top: 64px; */
     margin-bottom: 0;
     position:fixed;
+    top:7%;
     gap:1%;
 }
 
@@ -152,7 +152,7 @@ header {
     position:fixed;
     top:0;
     width:100%;
-    height:4%;
+    height:7%;
 }
 
 /* Footer (Now Playing) */
@@ -188,7 +188,7 @@ footer.now-playing {
 }
 
 .user-profile img {
-    margin-right:0;
+    margin-right:3%;
     width: 32px;
     height: 32px;
     border-radius: 50%;
