--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ header.header-content {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height:7%;
+    height:5%;
 }
 .home {
     display:flex;
@@ -85,18 +85,18 @@ header.header-content {
     width:auto;
     height:vh;
     padding:10px;
-    margin-top:7%;
+    margin-top:10%;
     /* margin-top: 64px; */
     margin-bottom: 0;
     position:fixed;
-    top:7%;
+    top:10%;
     gap:1%;
 }
 
 
 
 .sidebar1 {
-    flex: 0 0 15%; /* Fixed width of 23% */
+    flex: 0 0 16%; /* Fixed width of 23% */
     border-radius: 8px;
     background-color: #1f1f20;
     color: #b3b3b3;
@@ -104,7 +104,7 @@ header.header-content {
 }
 
 main {
-    flex: 0 0 50%; /* Fixed width of 50% */
+    flex: 0 0 51%; /* Fixed width of 50% */
     border-radius: 8px;
     /* background-color: #201d1d; */
     background-color: #242423;
@@ -149,10 +149,11 @@ header {
     padding: 10%;
     background-color: black;
     color: #fff;
+    margin-bottom:2%;
     position:fixed;
     top:0;
     width:100%;
-    height:7%;
+    height:5%;
 }
 
 /* Footer (Now Playing) */
