--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,18 @@ body {
     display:flex;
     gap:15px;
 }
-
-header.header-content {
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height:3%;
+    gap: 15px;
 }
 .home {
     display:flex;
     width:40px;
     height:40px;
     padding:none;
-    border-radius:50%;
 
 }
 .home img{
@@ -43,7 +41,6 @@ header.header-content {
     margin-top:4px;
     width:100%;
     height:100%;
-    border-radius:50%;
 }
 
 .library-item {
@@ -86,16 +83,14 @@ header.header-content {
     height:vh;
     padding:10px;
     /* margin-top: 64px; */
-    margin-bottom: 0;
-    position:fixed;
-    top:7%;
+    margin-bottom: 50px;
     gap:1%;
 }
 
 
 
 .sidebar1 {
-    flex: 0 0 16%; /* Fixed width of 23% */
+    flex: 0 0 15%; /* Fixed width of 23% */
     border-radius: 8px;
     background-color: #1f1f20;
     color: #b3b3b3;
@@ -103,7 +98,7 @@ header.header-content {
 }
 
 main {
-    flex: 0 0 51%; /* Fixed width of 50% */
+    flex: 0 0 50%; /* Fixed width of 50% */
     border-radius: 8px;
     /* background-color: #201d1d; */
     background-color: #242423;
@@ -145,14 +140,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10%;
+    padding: 10px 20px;
     background-color: black;
     color: #fff;
-    margin-bottom:2%;
-    position:fixed;
-    top:0;
-    width:100%;
-    height:3%;
 }
 
 /* Footer (Now Playing) */
@@ -178,7 +168,7 @@ footer.now-playing {
     border-radius: 20px;
     border: none;
     /* outline: none; */
-    background: url('search.jpg') no-repeat 10px center 50%;
+    background: url('search logo.png') no-repeat 10px center;
     background-size: 20px 20px;
     background-color: rgb(44, 42, 42);
     /* filter:invert(1);
@@ -188,7 +178,7 @@ footer.now-playing {
 }
 
 .user-profile img {
-    margin-right:3%;
+    margin-left: 100px;
     width: 32px;
     height: 32px;
     border-radius: 50%;
@@ -417,4 +407,4 @@ footer.now-playing {
     font-size: 12px;
     color: #b3b3b3;
     margin: 0 8px;
-}
+        }
